# laserfocus-host

./: .env.example  .eslintrc.js  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_SIGNING.md  ELECTRON.md  MCP_README.md  README.md  conversation-orchestrator-phase5-summary.md  dump.rdb  first_convo.txt  host_mvp_implementation_v2.md  host_mvp_implementation_v3.md  jest.config.js  langgraph.json  logger.js  main.js  mcp-coordinator-phase2-summary.md  mcp.json  mcp.schema.json  mcp_expert.md  memory.json  modelcontextprotocol-typescript-sdk.txt  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.cursorrules/: general.mdc
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
AthenaWidget/: index.html  renderer.js  style.css
InputPill/: index.html  renderer.js  style.css
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
assets/: 1024x.icns  entitlements.mac.plist
deprecated/: host_architecture_v2.md  host_mvp_implementation_v3.md
docs/: ALPHA_DISTRIBUTION.md  ENHANCED_UI_SYSTEM_SUMMARY.md  GEMINI_WORKAROUNDS.md  IMPLEMENTATION_SUMMARY.md  LEGACY_CLEANUP_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  RESTRUCTURING_COMPLETE.md  WHAT_THIS_ARCHITECTURE_ALLOWS.md  app-file-loading.md  architecture-analysis-and-improvement-plan.md  canvas-engine-evolution-v4.md  canvas-engine-v4-implementation.md  v0.0.4_o3_analysis.md
engine/: langgraph.json  mcp.json  pyproject.toml
engine/src/: main.py
engine/src/nodes/: generateAction.py  generateResponse.py  initializeEngine.py  updateCanvas.py
engine/src/tools/: __init__.py  canvas.py  dummy_data.py  index.py
engine/src/utils/: types.py
frontend/: package-lock.json  package.json
laserfocus/: ContentView.swift  Info.plist  InputPill.swift  Item.swift  Play.swift  laserfocus.entitlements  laserfocusApp.swift
laserfocus.xcodeproj/: project.pbxproj
orchestrator/: langgraph.json
(+217 files in other folders)
